More SpotBugs fixes and associated alignment with 8.5.x/9.0.x